--- a/gb/18/10/16/n10785935.md
+++ b/gb/18/10/16/n10785935.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fyaq233/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fyaq233/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fyaq233/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fyaq233/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fyaq233/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fyaq233/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fyaq233/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fyaq233/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/fyaq233/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fyaq233/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fyaq233/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fyaq233/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fyaq233/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>手指掰得咔咔响 会得关节炎吗？</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/10/shutterstock_1060532309-600x400.jpg" />
 <h6>经常掰关节的人，是否更容易得关节炎？(Shutterstock)
 </h6>
 <hr>
-<p>唐纳德·安格（Donald Unger）自小就喜欢把指关节掰得咔咔响，他的妈妈和姨妈都警告他这样会得<ahref="https://github.com/fyaq233/djy/blob/master/gb/tag/%E5%85%B3%E8%8A%82%E7%82%8E.md#1">关节炎</a>。为了证明她们是错的，安格在接下来50年里，每天掰左手关节至少两次，但是不掰右手关节。</p>
-<p>据“大众科学”（Popular Science）网站报导，50年后，已经成为加利福尼亚一名医生的安格检查了自己的双手，确定都没有<ahref="https://github.com/fyaq233/djy/blob/master/gb/tag/%E5%85%B3%E8%8A%82%E7%82%8E.md#1">关节炎</a>的问题，两只手也没什么差别。1998年，他写信给《关节炎和风湿病学》（Arthritis and Rheumatology）期刊：“这项初步调查显示，掰关节和手指患关节炎之间并无确凿关联。”</p>
+<p>唐纳德·安格（Donald Unger）自小就喜欢把指关节掰得咔咔响，他的妈妈和姨妈都警告他这样会得<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%85%B3%E8%8A%82%E7%82%8E.md#1">关节炎</a>。为了证明她们是错的，安格在接下来50年里，每天掰左手关节至少两次，但是不掰右手关节。</p>
+<p>据“大众科学”（Popular Science）网站报导，50年后，已经成为加利福尼亚一名医生的安格检查了自己的双手，确定都没有<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%85%B3%E8%8A%82%E7%82%8E.md#1">关节炎</a>的问题，两只手也没什么差别。1998年，他写信给《关节炎和风湿病学》（Arthritis and Rheumatology）期刊：“这项初步调查显示，掰关节和手指患关节炎之间并无确凿关联。”</p>
 <p>这项“研究”算不上真正的“科研结果”——仅有一份取样，不足以为整个人类群体下结论，更何况安格不是一位中立的观察者。不过自那以后，很多研究者对此进行了研究，大部分的结论是：掰关节可能不会导致关节炎。</p>
 <p>位于华盛顿州温哥华市的PeaceHealth西南医疗中心的运动和家庭医疗师凯文·德韦伯（Kevin DeWeber）的研究就是其中一份。他也是一个爱掰指关节的人。</p>
 <p>这份2010年发表在《美国家庭医学委员会》期刊上的研究，用X光检查了200人的右手。其中约20%的人说经常性掰指关节，但结果发现他们得关节炎的几率并不比没有掰指关节习惯的人高。</p>
@@ -16,51 +16,56 @@
 <p>另外，关节的损伤的确是关节炎的成因之一，而掰关节的声音会让人以为是关节受伤时发出的声音。</p>
 <p>德韦伯仍谨慎提醒，这个问题其实并没有百分百确定的答案，所有的研究都只是说“没有证据支持掰关节会导致关节炎”这个说法。要进行确切的研究难度很大，因为得跟踪调查对象几乎大半生，并要求他们严格遵循实验规矩，这样的研究很难实现。</p>
 <p>安格曾以其叛逆的研究获得了2009年“搞笑诺贝尔奖”（Ig Nobel Prizes）。他还想质疑“吃菠菜重要性”的说法，所幸的是，这个问题上他错了。◇</p>
-<h2><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/fyaq233/djy/blob/master/gb/17/12/28/n9999646.md#1" target="_blank" rel="noopener noreferrer">为什么睡梦中身体会突然一抖？</a></span></h2>
-<h2><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/fyaq233/djy/blob/master/gb/16/4/11/n7544041.md#1" target="_blank" rel="noopener noreferrer">类风湿性关节炎的10种天然疗法</a></span></h2>
-<h2><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/fyaq233/djy/blob/master/gb/18/10/3/n10759374.md#1" target="_blank" rel="noopener noreferrer">推墙1分钟 改善便秘、强化膝关节</a>?</span></h2>
+<h2><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/ydbzqt347/djy/blob/master/gb/17/12/28/n9999646.md#1" target="_blank" rel="noopener noreferrer">为什么睡梦中身体会突然一抖？</a></span></h2>
+<h2><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/ydbzqt347/djy/blob/master/gb/16/4/11/n7544041.md#1" target="_blank" rel="noopener noreferrer">类风湿性关节炎的10种天然疗法</a></span></h2>
+<h2><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/3/n10759374.md#1" target="_blank" rel="noopener noreferrer">推墙1分钟 改善便秘、强化膝关节</a>?</span></h2>
 <p>责任编辑：朱涵儒</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/17/6/21/n9288299.md#1">长期关节疼痛？类风湿性关节炎的中医疗法</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/18/6/18/n10493181.md#1">越南女商人曾为自己准备葬礼 感恩遇转机</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/18/8/13/n10634086.md#1">戒指卡住手指怎么办？医师1招轻松取下</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/18/8/14/n10636687.md#1">嘴里伤口愈合速度是手臂3倍？为何如此惊人</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/18/8/17/n10646967.md#1">每个人都有脊椎侧弯？破解12大侧弯迷思</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/18/8/18/n10648766.md#1">这些患绝症的精英们何以逢生（1）</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/3/19/n11955267.md#1">脊椎最怕你做5件事！中医师这样做保养脊椎</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/3/15/n11942884.md#1">80%疾病都和脊椎有关？1动作揪出脊椎问题</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/3/14/n11940624.md#1">比肥胖还危险 骨质疏松是最可怕“生活习惯病”</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/3/12/n11935821.md#1">40岁后 你有骨松危机吗？1图测出骨骼健康度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/6/21/n9288299.md#1">长期关节疼痛？类风湿性关节炎的中医疗法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/18/n10493181.md#1">越南女商人曾为自己准备葬礼 感恩遇转机</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/13/n10634086.md#1">戒指卡住手指怎么办？医师1招轻松取下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/14/n10636687.md#1">嘴里伤口愈合速度是手臂3倍？为何如此惊人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/17/n10646967.md#1">每个人都有脊椎侧弯？破解12大侧弯迷思</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/18/n10648766.md#1">这些患绝症的精英们何以逢生（1）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/23/n13667634.md#1">25种食物和营养素 保健关节抗发炎</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/12/n13640944.md#1">蛋白质不仅有助增肌 还有2大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/12/n13641388.md#1">改善类风湿关节炎症状的饮食方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/2/18/n13587196.md#1">骨质疏松易致骨折 你可以这样做来预防</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/3/n9802518.md#1" target="_blank">你不了解的邓小平：与毛一同指挥大跃进（下）</a></li><li><a href="https://github.com/fyaq233/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/10/21/n4555095.md#1" target="_blank">这条命是法轮功给的</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/20/n9870365.md#1" target="_blank">林辉：文革第一禁书作者曾被内定死刑</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/7/n10897982.md#1" target="_blank">《求救信》感动欧洲议会观众：会哭很多次</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/22/n12052901.md#1">分析：金正恩残废或病故 中共恶梦将成真</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/22/n12050955.md#1">【拍案惊奇】谁接班金正恩？传习在秦岭探军工</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/22/n12051023.md#1">中山校长：威胁国安的人来校分享 我痛心疾首！</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/23/n12054189.md#1">【翻墙必看】金正恩或脑残 令中共雪上加霜</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/23/n12053941.md#1">【拍案惊奇】骇客攻武汉病毒所 京城面临大清洗</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/20/n12046904.md#1">卡卡捧谭德塞遭批 其母亲与WHO关系被起底</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/21/n12050674.md#1">郎朗参加全球抗疫音乐会 国籍标注美国引热议</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/22/n12053302.md#1">三月大婴儿趴睡死亡 马伊琍斥：专家是刽子手</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/23/n12054555.md#1">周扬青认分手 亲揭罗志祥这些年花心不断</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/20/n12046991.md#1">隔离14天胖到80公斤 陈伟霆：快崩溃</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/22/n12051978.md#1">印度专家：5000年前文献“预言”中共病毒</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/4/n12003303.md#1">修行高人 开通阴阳两界为哪桩？</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/13/2/18/n3803627.md#1">米开朗基罗（5）《圣家族》</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/19/n12043816.md#1">应运出世? 华盛顿佩剑出征</a></li>
-<li><a href="https://github.com/fyaq233/djy/blob/master/gb/20/4/11/n12022063.md#1">赞美人“八斗之才” 余下二斗给了谁？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687492.md#1">【未解之谜】濒死体验 神启：生命可以选择</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">【唐瑞讲故事】朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fyaq233/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fyaq233/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/10/16/n10785935.htm">手指掰得咔咔响 会得关节炎吗？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/10/16/n10785935.htm">手指掰得咔咔响 会得关节炎吗？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fyaq233/djy/blob/master/gb/18/10/16/n10785935.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fyaq233/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fyaq233/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fyaq233/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fyaq233/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyaq233/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/18/10/16/n10785935.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
